Set default JVM_OPTIONS for linkerd and namerd
When JVM_OPTIONS is not specified at runtime, we provide default JVM_OPTIONS.
This should improve default behavior.